# nova-api-openstack

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  dependencies.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: flavors.py  images.py  servers.py
app/core/: exceptions.py  logging.py  middleware.py  pagination.py
app/db/: session.py
app/infra/openstack/: base.py  mock_client.py  real_client.py
app/models/: __init__.py  flavor.py  image.py  server.py
app/schemas/: common.py  flavor.py  image.py  server.py
app/services/: flavor_service.py  image_service.py  server_service.py
docs/: architecture.md  logging.md  roadmap.md
docs/adr/: 001-fastapi-over-flask.md  002-async-sqlalchemy-aiosqlite.md  003-openstack-abstraction-layer.md  004-structured-logging-request-id.md
tests/: conftest.py
tests/api/: test_flavors.py  test_images.py  test_server_actions.py  test_servers.py
tests/services/: test_server_service.py
