[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intuitive"
version = "0.1.0"
description = "OpenStack VM Lifecycle REST API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "sqlalchemy==2.0.36",
    "aiosqlite==0.20.0",
    "httpx==0.28.1",
    "greenlet",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "ruff==0.8.6",
    "mypy==1.14.0",
    "types-passlib",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["app/infra/openstack/real_client.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
